--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ tiktok : dev_michan
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIOLHOST</title>
+    <title>CERAHPAY</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Update FontAwesome ke versi terbaru -->
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
@@ -17,21 +17,21 @@ tiktok : dev_michan
 <body>
     <div class="header-section">
         <img src="https://files.catbox.moe/cij2jb.jpg" class="profile-img" alt="Profile">
-        <h1 class="header-text">DIOLHOST</h1>
+        <h1 class="header-text">CERAHPAY</h1>
     </div>
 
-    <div class="japanese-text">SUBSCRIBE YT DIOLHOST</div>
+    <div class="japanese-text">Selamat datang di CerahPay,Kami menyediakan!</div>
 
     <div class="container">
         <div class="tags">
-            <span class="tag"><i class="fas fa-search"></i> Jasa</span>
-            <span class="tag"><i class="fas fa-leaf"></i> Desain</span>
-            <span class="tag"><i class="fas fa-edit"></i> Editing</span>
-            <span class="tag"><i class="fas fa-paint-brush"></i> Javascript</span>
-            <span class="tag"><i class="fas fa-gamepad"></i> Gaming</span>
-            <span class="tag"><i class="fas fa-laugh"></i> Meme</span>
-            <span class="tag"><i class="fas fa-music"></i> Music</span>
-            <span class="tag"><i class="fas fa-history"></i> History</span>
+            <span class="tag"><i class="fas fa-search"></i> Suntik sosmed</span>
+            <span class="tag"><i class="fas fa-leaf"></i> Topup game</span>
+            <span class="tag"><i class="fas fa-edit"></i> Topup saldo</span>
+            <span class="tag"><i class="fas fa-paint-brush"></i> Premium app</span>
+            <span class="tag"><i class="fas fa-gamepad"></i> Kuota</span>
+            <span class="tag"><i class="fas fa-laugh"></i> Pulsa</span>
+            <span class="tag"><i class="fas fa-music"></i> Script bot</span>
+            <span class="tag"><i class="fas fa-history"></i> Dll</span>
         </div>
         
         <div class="social">
