--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ tiktok : dev_michan
         <h1 class="header-text">CERAHPAY</h1>
     </div>
 
-    <div class="japanese-text">Selamat datang di CerahPay,Kami menyediakan!</div>
+    <div class="japanese-text">Selamat datang di CerahPay, Kami melayani!</div>
 
     <div class="container">
         <div class="tags">
