--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@ tiktok : dev_michan
             <img src="https://files.catbox.moe/r52ea4.png" class="download-icon" alt="telegram">
             TELEGRAM 
         </a>
+
+        <a href="https://safefileku.com/download/MbGx4jX1pNoobYxN" 
+           class="download-btn"
+           target="_blank">
+            <img src="https://img86.pixhost.to/images/484/562980307_media.jpg" class="download-icon" alt="document">
+            SCRIPT FREE 
+        </a>
     </div>
 </body>
     <footer class="website-footer">
