--- a/index.html
+++ b/index.html
@@ -81,5 +81,10 @@ instagram : cerahpay
 </body>
     <footer class="website-footer">
     ©DI BUAT OLEH CERAHPAY 🌐 
+
+        <div class="container">
+        <div class="tags">
+            <span class="tag"><i class="fas fa-search"></i> Bekerja sama dengan order kuota</span>
+        </div>   
 </footer>
 </html>
