--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ instagram : cerahpay
 
         <div class="container">
         <div class="tags">
-            <span class="tag"><i class="fas fa-search"></i> Bekerja sama dengan order kuota</span>
+            <span class="tag"><i class="fas fa-search"></i> 2020 - 2025</span>
         </div>   
 </footer>
 </html>
