--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ instagram : cerahpay
         <a href="https://safefileku.com/download/MbGx4jX1pNoobYxN" 
            class="download-btn"
            target="_blank">
-            <img src="" class="download-icon" alt="document">
+            <img src="" class="download-icon" alt="">
             SCRIPT FREE 
         </a>
     </div>
